<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_lock">Lock</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scan">Scan to Log on.</string>
    <string name="send">Send</string>
    <string name="title_activity_start">Lock: Overview</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Lock: Register</string>
    <string name="loadSecret">load secret</string>
    <string name="welcome">Welcome to the lock app.</string>
    <string name="checkBoxNotRegistered">Lock App is not registered.</string>
	<string name="checkBoxRegistered">Lock App is registered.</string>
    <string name="delete_key">Delete Key</string>
    <string name="settings">Settings</string>
</resources>
