<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/settings"
        android:textSize="@dimen/font" />

    <Button
        android:id="@+id/scanToRegisterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="29dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/registerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/deleteKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scanToRegisterButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="29dp"
        android:layout_marginTop="22dp"
        android:text="@string/delete_key" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/scanToRegisterButton"
        android:layout_below="@+id/registerInfo"
        android:src="@drawable/saplogo" />

</RelativeLayout>